--- a/defaults/fr.yml
+++ b/defaults/fr.yml
@@ -223,7 +223,7 @@ key_names:
   kuanyama: Kuanyama
   kurdish: Kurde
   lgbtq: LGBTQ+
-  lgbtq+_pride_month: Mois des fiertés
+  lgbtq_pride_month: Mois des fiertés
   labor_day: Fête du travail
   lao: Lao
   latin: Latin
@@ -463,7 +463,7 @@ key_names:
   western_frisian: Frison Occidental
   winners: Gagnants
   wolof: Wolof
-  women's_history_month: Mois de l'histoire des femmes
+  womens_history_month: Mois de l'histoire des femmes
   writer: Scénariste
   writers: Scénaristes
   xhosa: Xhosa
