--- a/defaults/en.yml
+++ b/defaults/en.yml
@@ -138,7 +138,7 @@ key_names:
   families: Families
   fantasy: Fantasy
   faroese: Faroese
-  father's_day: Father's Day
+  fathers_day: Father's Day
   favorited: Favorited
   fijian: Fijian
   filipino: Filipino
@@ -223,7 +223,7 @@ key_names:
   kuanyama: Kuanyama
   kurdish: Kurdish
   lgbtq: LGBTQ+
-  lgbtq+_pride_month: LGBTQ+ Pride Month
+  lgbtq_pride_month: LGBTQ+ Pride Month
   labor_day: Labor Day
   lao: Lao
   latin: Latin
@@ -381,7 +381,7 @@ key_names:
   sport: Sport
   spy: Spy
   sri_lanka: Sri Lanka
-  st._patricks_day: St. Patrick's Day
+  st_patricks_day: St. Patrick's Day
   stand-up_comedy: Stand-Up Comedy
   stevenlu's_popular_movies: Stevenlu's popular movies
   stoner_comedy: Stoner Comedy
@@ -463,7 +463,7 @@ key_names:
   western_frisian: Western Frisian
   winners: Winners
   wolof: Wolof
-  women's_history_month: Women's History Month
+  womens_history_month: Women's History Month
   writer: Writer
   writers: Writers
   xhosa: Xhosa
